// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator should render a default paginator 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      className="paginator"
    >
      <a
        className="nav-link left-controls is-disabled"
        onClick={[Function]}
        tabIndex="0"
      >
        First
      </a>
      <a
        className="nav-link left-controls previous is-disabled"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
      </a>
      Page 1
      <a
        className="nav-link right-controls next"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
      </a>
      <a
        className="nav-link right-controls"
        onClick={[Function]}
        tabIndex="0"
      >
        Last
      </a>
    </div>
  }
  responsiveTo="parent"
  small={
    <div
      className="paginator"
    >
      <a
        className="nav-link left-controls is-disabled"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        First
      </a>
      <a
        className="nav-link left-controls previous is-disabled"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
        Previous
      </a>
      <a
        className="nav-link is-selected"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={null}
      >
        1
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        2
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        3
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        4
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        5
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        6
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        7
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        8
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        9
      </a>
      <a
        className="nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        10
      </a>
      <a
        className="nav-link right-controls next"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        Next
        <span
          className="icon"
        />
      </a>
      <a
        className="nav-link right-controls"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        Last
      </a>
    </div>
  }
/>
`;

exports[`Paginator should render a paginator without page links 1`] = `
<ResponsiveElement
  defaultElement={
    <div
      className="paginator pageless"
    >
      <a
        className="nav-link left-controls previous"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
      </a>
      <a
        className="nav-link right-controls next"
        onClick={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
      </a>
    </div>
  }
  responsiveTo="parent"
  small={
    <div
      className="paginator pageless"
    >
      <a
        className="nav-link left-controls previous"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <span
          className="icon"
        />
        Previous
      </a>
      <a
        className="nav-link right-controls next"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        Next
        <span
          className="icon"
        />
      </a>
    </div>
  }
/>
`;
